# safeavr

./: .clang-format  .gitignore  .gitmodules  Avr.cmake  AvrToolchain.cmake  CMakeLists.txt  Flags.cmake  LICENSE  README.md  SafeAVR.atsln  TODO.md  avr.cmake  build.sh  check.sh  cppcheck.json  test.sh  tmp_build.sh
.github/workflows/: main.yml
Examples/: Examples.componentinfo.xml  Examples.cproj  main.c  safeavr_config.h
SafeAVR/: CMakeLists.txt  SafeAVR.componentinfo.xml  SafeAVR.cproj
SafeAVR/include/: safeavr.h
SafeAVR/include/safeavr/: assert.h  default_panic.h  defs.h  gpio.h
SafeAVR/src/: assert.c  gpio.c
check/: README.md  misra.json  run.sh
documentation/: Requirements.md
examples/: adc.c  analog.c  blink.c  raw.c  safeavr_config.h  serial.c
include/: assert.h  defs.h  gpio.h  safeavr.h  usart.h
include/safeavr/: assert.h  core.h  defs.h  gpio.h  hal.h  usart.h
include/safeavr/core/: adc.h  assert.h  bits.h  defs.h  gpio.h  interrupts.h  timer.h  types.h  usart.h
include/safeavr/hal/: gpio.h  timer.h  usart.h
scripts/: build  check  check.sh  ctags  simulation  test  upload
simulation/: CMakeLists.txt  main.c
src/: CMakeLists.txt  assert.c  gpio.c  gpio_registers.c  usart.c
src/core/: adc.c  assert.c  gpio.c  timer.c  usart.c
src/hal/: gpio.c  timer.c  usart.c
test/: CMakeLists.txt  gpio_register_mocks.c  gpio_register_mocks.cpp  gpio_test.h  gpio_tests.c  gpio_tests.cpp  safeavr_config.h  test_suite.c  unity_config.h
